<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Citygame</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_play">Play</string>
    <string name="button_settings">Settings</string>
    <string name="tvCity">CITY</string>
    <string name="tvCityName">SALT LAKE</string>
    <string name="buFoundIt">Found It</string>
    <string name="tvCatch">CATCH</string>

    <!-- Colors -->
    <color name="bgGray">#626465</color>
    <color name="lightText">#d6d6d6</color>
    <color name="greenText">#accb12</color>

</resources>
