<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    style="@style/bgGray"
    tools:context=".CompassActivity" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/compassView"
        android:id="@+id/cityTextLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvCity"
            android:id="@+id/tvCity"
            style="@style/greenText"
            android:textStyle="bold"
            android:textSize="36sp"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tvCityName"
            android:id="@+id/tvCityName"
            style="@style/lightText"
            android:textSize="36sp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <view
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="tallen.edu.weber.citygame.CompassView"
        android:id="@+id/compassView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buFoundIt"
        android:id="@+id/buFound"
        android:onClick="foundIt"
        android:background="@drawable/buttonshape"
        android:textColor="#F5F5F5"
        android:textSize="34sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>